# MyStore

./: README.md  TODO.md
Register/: .gitignore  Purchase.txt  Receipt.txt  build.gradle  settings.gradle
Register/src/main/java/: App.java  Display.java  Item.java  ItemScanner.java  Purchase.txt
storeserver/: .gitignore  Cargo.toml  Rocket.toml
storeserver/database/: gen_db.sh  schema.sqlite  test_data.sqlite
storeserver/src/: main.rs  models.rs  schema.rs
