[package]
name = "storeserver"
version = "0.1.0"
authors = ["Rachel Thornton <rachelmthornton18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1", features=["json"]}
diesel = {version="1.4.4", features=["sqlite"]}

[dependencies.rocket_sync_db_pools]
version="0.1.0-rc.1"
default-features=false
features=["diesel_sqlite_pool"]
